# Resume-Evaluation-and-Grading-System

./: .gitignore  README.md  app.py  db.py  readme.pd  requirements.txt  resume_evaluator.db  sample_resume.pdf.docx  test_ai_evaluator.py
static/: style.css
templates/: base.html  batch_upload.html  compare.html  dashboard.html  generate.html  history.html  index.html  login.html  result.html  settings.html  signup.html  skill_gap.html  tips.html  upload.html
utils/: .gitignore  .replit  __init__.py  ai_evaluator.py  ai_improvements.py  database.py  helpers.py  nlp.py  pyproject.toml  replit.md
